--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "canary_flow using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]==1.4.1",
+    "crewai[tools]==1.5.0",
     "exa-py>=2.0.0",
 ]
 
@@ -20,3 +20,7 @@ build-backend = "hatchling.build"
 
 [tool.crewai]
 type = "flow"
+
+
+[tool.uv.sources]
+crewai = { path = "/Users/lorenzejay/workspace/crewAI/lib/crewai/", editable = true }
