--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "canary_flow using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai-tools==1.10.1b1",
-    "crewai[google-genai,tools]==1.10.1b1",
+    "crewai-tools==1.10.1a1",
+    "crewai[google-genai,tools]==1.10.1a1",
     "exa-py>=2.0.0",
 ]
 
